<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".blogpage">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/Blogmain"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Title1"
            android:layout_marginBottom="40dp"
            android:textSize="30dp">
        </TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Num1Blog"
            android:orientation="vertical">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/logo">
            </ImageView>

            <TextView
                android:id="@+id/display"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Num1BlogCt">

            </TextView>

        </LinearLayout>

        <Button
            android:id="@+id/submit"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="50dp"
            android:text="@string/SendButton"
            android:background="@color/blue"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Title2"
            android:layout_marginBottom="40dp"
            android:textSize="30dp">
        </TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Num2Blog"
            android:orientation="vertical">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/logo2"
                >
            </ImageView>

            <TextView
                android:id="@+id/display2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Num2BlogCt">

            </TextView>

        </LinearLayout>

        <Button
            android:id="@+id/submit2"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="50dp"
            android:text="@string/SendButton"
            android:background="@color/blue"
            />

    </LinearLayout>


</ScrollView>